--- a/form.html
+++ b/form.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shop Location Form</title>
-    <link rel="stylesheet" href="/assets/css/form.css">
+    <link rel="stylesheet" href="assets/css/form.css">
     <!-- Add Leaflet CSS -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
     <!-- Optional: Add a CSS library for styling the suggestion list -->
