--- a/productDetails.html
+++ b/productDetails.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product Details</title>
-    <link rel="stylesheet" href="assets/css/productDetails.css"> <!-- Link to your CSS file -->
+    <link rel="stylesheet" href="./assets/css/productDetails.css"> <!-- Link to your CSS file -->
 </head>
 <body>
      <header>
         <h1>Product Details</h1>
         <nav class="navbar">
             <div class="logo">
-                <img src="/assets/images/ttracker_logo.png" alt="Trash Tracker Logo">
+                <img src="./assets/images/ttracker_logo.png" alt="Trash Tracker Logo">
             </div>
             
             <div class="menu-toggle" onclick="toggleMenu()">
@@ -29,7 +29,7 @@
                 <li><a href="form.html">ENTER LOCATION</a></li>
             </ul>
             <div class="profile-icon">
-                <img src="assets/images/profile_icon.jpg" alt="Profile Icon" class="profile-logo">
+                <img src="./assets/images/profile_icon.jpg" alt="Profile Icon" class="profile-logo">
             </div>
         </nav>
     </header>
@@ -41,7 +41,7 @@
         <p id="product-description"></p>
         <p id="product-address"></p>
     </div>
-    <script type="module" src="assets/js/productDetails.js"></script>
+    <script type="module" src="./assets/js/productDetails.js"></script>
     
     <script>
         function toggleMenu() {
