Js error corrected

--- a/form.html
+++ b/form.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shop Location Form</title>
-    <link rel="stylesheet" href="assets/css/form.css">
+    <link rel="stylesheet" href="./assets/css/form.css">
     <!-- Add Leaflet CSS -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
     <!-- Optional: Add a CSS library for styling the suggestion list -->
@@ -17,7 +17,7 @@
     <header>
         <nav class="navbar">
             <div class="logo">
-                <img src="/assets/images/ttracker_logo.png" alt="Trash Tracker Logo">
+                <img src="./assets/images/ttracker_logo.png" alt="Trash Tracker Logo">
             </div>
             
             <div class="menu-toggle" onclick="toggleMenu()">
@@ -35,7 +35,7 @@
                 <li><a href="form.html">ENTER LOCATION</a></li>
             </ul>
             <div class="profile-icon">
-                <img src="assets/images/profile_icon.jpg" alt="Profile Icon" class="profile-logo">
+                <img src="./assets/images/profile_icon.jpg" alt="Profile Icon" class="profile-logo">
             </div>
         </nav>
     </header>
@@ -90,7 +90,7 @@
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
     <!-- Add Leaflet Control Geocoder JS -->
     <script src="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.js"></script>
-    <script type="module" src="/assets/js/form.js"></script>
+    <script type="module" src="./assets/js/form.js"></script>
 
     
     <script>
