--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trash Tracker - Home</title>
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
@@ -12,7 +12,7 @@
     <header>
         <nav class="navbar">
             <div class="logo">
-                <img src="images/ttracker_logo.png" alt="Trash Tracker Logo">
+                <img src="./images/ttracker_logo.png" alt="Trash Tracker Logo">
             </div>
             <div class="menu-toggle" onclick="toggleMenu()">
                 <span class="hamburger">&#9776;</span>
@@ -29,7 +29,7 @@
                 <li><a href="form.html">ENTER LOCATION</a></li>
             </ul>
             <div class="profile-icon">
-                <img src="images/profile_icon.jpg" alt="Profile Icon" class="profile-logo">
+                <img src="./images/profile_icon.jpg" alt="Profile Icon" class="profile-logo">
             </div>
         </nav>
     </header>
