--- a/form.html
+++ b/form.html
@@ -17,22 +17,17 @@
     <header>
         <nav class="navbar">
             <div class="logo">
-                <img src="./assets/images/ttracker_logo.png" alt="Trash Tracker Logo">
+                <img src="./assets/images/ttracker_logo.png" alt="Price Updates Logo">
             </div>
             
             <div class="menu-toggle" onclick="toggleMenu()">
                 <span class="hamburger">&#9776;</span>
             </div>
             <ul class="nav-links">
-                <li><a href="index.html">HOME</a></li>
-                <li><a href="productSearch.html">Find Products</a></li>
-                <li><a href="#profile.html">OUR PEOPLE</a></li>
-                <li><a href="#help.html">SERVICES</a></li>
-                <li><a href="#settings.html">RECYCLING</a></li>
-                <li><a href="#elp.html">BLOG</a></li>
-                <li><a href="#help.html">CONTACT</a></li>
-                <li><a href="#help.html">CLIENTS</a></li>
-                <li><a href="form.html">ENTER LOCATION</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="productSearch.html">Search Prices</a></li>
+                <li><a href="form.html">Share Shop Lcation</a></li>
+                <li><a href="#team.html">About Us</a></li>
             </ul>
             <div class="profile-icon">
                 <img src="./assets/images/profile_icon.jpg" alt="Profile Icon" class="profile-logo">
