--- a/form.html
+++ b/form.html
@@ -17,7 +17,7 @@
     <header>
         <nav class="navbar">
             <div class="logo">
-                <img src="./assets/images/ttracker_logo.png" alt="Price Updates Logo">
+                <img src="./assets/images/price_updates_logo.jpeg" alt="Price Updates Logo">
             </div>
             
             <div class="menu-toggle" onclick="toggleMenu()">
