--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <nav class="navbar">
         <img
           class="logo"
-          src="./assets/images/profile_icon.jpg"
+          src="./assets/images/price_updates_logo.jpeg"
           alt="Price Updates Logo"
         />
         <ul class="nav-links">
