--- a/productSearch.html
+++ b/productSearch.html
@@ -21,7 +21,7 @@
     <header>
         <nav class="navbar">
             <div class="logo">
-                <img src="./assets/images/profile_icon.gif" alt="Price Updates Logo">
+                <img src="./assets/images/price_updates_logo.jpeg" alt="Price Updates Logo">
             </div>
 
             <div class="menu-toggle" onclick="toggleMenu()">
@@ -34,7 +34,7 @@
                 <li><a href="team.html">Abut Us</a></li>
             </ul>
             <div class="profile-icon">
-                <img src="assets/images/profile_icon.jpg" alt="Profile Icon" class="profile-logo">
+                <img src="./assets/images/profile_icon.gif" alt="Profile Icon" class="profile-logo">
             </div>
         </nav>
     </header>
@@ -69,7 +69,7 @@
         </p>
     </footer>
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
-    <script type="module" src="/assets/js/productSearch.js"></script>
+    <script type="module" src="./assets/js/productSearch.js"></script>
 
     <script>
         function toggleMenu() {
