productSearch Location Suggestion fixed

--- a/productSearch.html
+++ b/productSearch.html
@@ -41,8 +41,10 @@
 
     <div class="container">
         <h2>Find Products Near You</h2>
+        <label for="location-input"></label>
         <input type="text" id="location-input" placeholder="Start typing a location">
         <ul id="location-suggestions"></ul> <!-- Suggestions appear here -->
+        <label for="product-input"></label>
         <input type="text" id="product-input" placeholder="Enter a product name">
 
         <button id="search-button">Search</button>
