--- a/productDetails.html
+++ b/productDetails.html
@@ -11,22 +11,17 @@
         <h1>Product Details</h1>
         <nav class="navbar">
             <div class="logo">
-                <img src="./assets/images/ttracker_logo.png" alt="Trash Tracker Logo">
+                <img src="./assets/images/price_updates_logo.jpeg" alt="Trash Tracker Logo">
             </div>
             
             <div class="menu-toggle" onclick="toggleMenu()">
                 <span class="hamburger">&#9776;</span>
             </div>
             <ul class="nav-links">
-                <li><a href="index.html">HOME</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="productSearch.html">Find Products</a></li>
-                <li><a href="#profile.html">OUR PEOPLE</a></li>
-                <li><a href="#help.html">SERVICES</a></li>
-                <li><a href="#settings.html">RECYCLING</a></li>
-                <li><a href="#elp.html">BLOG</a></li>
-                <li><a href="#help.html">CONTACT</a></li>
-                <li><a href="#help.html">CLIENTS</a></li>
-                <li><a href="form.html">ENTER LOCATION</a></li>
+                <li><a href="form.html">Upload Shop Location</a></li>
+                <li><a href="team.html">Abut Us</a></li>
             </ul>
             <div class="profile-icon">
                 <img src="./assets/images/profile_icon.jpg" alt="Profile Icon" class="profile-logo">
