--- a/productSearch.html
+++ b/productSearch.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product Search</title>
-    <link rel="stylesheet" href="assets/css/productSearch.css">
+    <link rel="stylesheet" href="./assets/css/productSearch.css">
 
     <!-- Leaflet CSS for map -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
